# RoomRadar

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  database-schema.md  prd.md  project-plan.md  roadmap.md
src/hotel_spider/: main.py
src/hotel_spider/adapters/: amap.py  base.py  ota.py
src/hotel_spider/api/: deps.py  router.py
src/hotel_spider/api/routes/: health.py  hotels.py  rates.py  system.py
src/hotel_spider/core/: config.py
src/hotel_spider/db/: models.py  session.py
src/hotel_spider/schemas/: hotel.py  rate.py
src/hotel_spider/services/: discovery.py  rates.py
src/hotel_spider/web/: admin.py
tests/: test_app.py
